objects/vlocity_cmt__Rule__c.object
<CustomObject>
    <description>Vlocity Rules, or Vlocity CPQ Rules, are rules used to define constraints and actions taken to configure, price and quote products or services.</description>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <description>Description of the rule</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Expression__c</fullName>
        <label>Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FailureMessage__c</fullName>
        <label>Failure Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FallbackId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fallback Rule</label>
        <referenceTo>vlocity_cmt__EntityFilter__c</referenceTo>
        <relationshipLabel>Vlocity Rules (Fallback Rule)</relationshipLabel>
        <relationshipName>FallbackRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HeaderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Header Rule</label>
        <referenceTo>vlocity_cmt__EntityFilter__c</referenceTo>
        <relationshipLabel>HeaderRules</relationshipLabel>
        <relationshipName>VlocityRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectName__c</fullName>
        <description>API name of the object the rule will operate on</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Operation__c</fullName>
        <label>Expression Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>And</fullName>
                </value>
                <value>
                    <fullName>Or</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>If Else If</fullName>
                </value>
                <value>
                    <fullName>If</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RulePurpose__c</fullName>
        <label>Context Rule Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleType__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Penalty</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                    <isActive>false</isActive>
                    <label>Evaluation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>The type of Vlocity Rule such as configuration rules, pricing rules, eligibility rules, availability rules and attribute configuration rules.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Attributes Configuration</fullName>
                </value>
                <value>
                    <fullName>Context Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Rule</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>